[project]
name = "reinforcement_learning"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[classic-control,box2d] (>=1.2.1,<2.0.0)",
    "Pillow (>=12.0.0,<13.0.0)",
    "matplotlib (==3.7.0)",
    "numpy (<2)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
